# agentic-org

./: .gitignore  .product-repos.md  BACKLOG.md  BRIEFING.md  CEO-GUIDE.md  CEO.md  CHARTER.md  CLAUDE.md  DECISIONS.md  DIRECTIVES.md  LEARNINGS.md  METRICS.md  PLAYBOOKS-ARCHIVE.md  PLAYBOOKS.md  ROSTER.md  STATE.md  WORKBENCH.md  package-lock.json  package.json
.cto-private/: CEO-INBOX.md  THREAD.md
daemon/: CYCLE-LOG-ARCHIVE.md  CYCLE-LOG.md  README.md  cto-cycle-prompt.md  health.json  run-cycle.sh
org/: talent-capability-plan.md
product/: pilot-feedback-questions.md  pilot-feedback-template.md  pilot-onboarding.md  pilot-plan.md  pilot-tracker.md  pilot-week-0-summary.md  test-validation-summary.md
products/dbt-guardian/: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
products/dbt-guardian/.github/workflows/: lint.yml  release.yml  test.yml
products/dbt-guardian/src/dbt_guardian/: __init__.py  cli.py
products/dbt-guardian/src/dbt_guardian/agents/: __init__.py
products/dbt-guardian/src/dbt_guardian/analyzers/: __init__.py  coverage.py
products/dbt-guardian/src/dbt_guardian/generators/: __init__.py  schema_yaml.py
products/dbt-guardian/src/dbt_guardian/parsers/: __init__.py  catalog.py  manifest.py  project.py
products/dbt-guardian/tests/: __init__.py
products/dbt-guardian/tests/unit/: test_coverage_analyzer.py  test_manifest_parser.py  test_schema_yaml_generator.py
research/: agent-toolset-spec.md  ai-agent-landscape.md  claude-agent-capabilities.md  data-stack-agent-architecture.md  data-stack-competitive-landscape.md  defensibility-analysis.md  modern-data-stack-agent-opportunity.md  narrow-vs-general-agents.md  process-bloat-audit.md  product-concepts.md  product-thesis-v1.md  sdkification.md
(+146 files in other folders)
